# polyglot

./: .gitignore  LICENSE  README.md  bg.json  build.sh  de.json  deepl.py  deepl_request.py  en.json  es.json  exist.txt  fr.json  it.mo  it.po  main.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  source.json  test_build.sh  translation.py
.github/workflows/: python-publish.yml
.github/worlkflows/: publish_package.yml
deepl_translator/: __main__.py  managers.py
deepl_translator/deepl_translator_RICCARDO_FASAN.egg-info/: PKG-INFO  SOURCES.txt
deeply/: __init__.py  __main__.py  deepl.py  managers.py
polyglot/: __init__.py  __main__.py  arguments.py  clients.py  commands.py  common.py  connectors.py  deepl.py  deepl_request.py  engines.py  errors.py  exceptions.py  handlers.py  license.py  managers.py  polyglot.py  translator.py  translators.py  utilities.py  utils.py
polyglot/connectors/: connector.py  deepl_connector.py
src/deepl_translator/: __main__.py  deepl.py  managers.py
src/deepl_translator_RICCARDO_FASAN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
