[metadata]
name = deepl-translator-RICCARDO-FASAN
version = 0.0.2
author = Riccardo Fasan
author_email = fasanriccardo21@gmail.com
description = Automation script that, using the DeepL API, generates a JSON or a PO file from a given source file.
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/riccardoFasan/deepl-translator-script
project_urls =
    Bug Tracker = https://github.com/riccardoFasan/deepl-translator-script/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = deepl_translator
packages = find:
python_requires = >=3.10

[options.packages.find]
where = deepl_translator